--- a/src/app/components/dashboard-admin-universidade/dashboard-admin-universidade.component.html
+++ b/src/app/components/dashboard-admin-universidade/dashboard-admin-universidade.component.html
@@ -6,7 +6,7 @@
   <section class="mt-4">
     <p>Bem-vindo ao painel de administrador da sua universidade. Selecione uma opção ou veja as estatísticas abaixo:</p>
     <nav class="mt-3 mb-4">
-      <a routerLink="/funcionarios" class="btn btn-info btn-lg">Gerenciar Funcionários</a>
+      <a routerLink="/admin-universidade/funcionarios" class="btn btn-info btn-lg">Gerenciar Funcionários</a>
       <!-- Adicionar mais botões de gerenciamento aqui no futuro -->
     </nav>
   </section>
