TA QUASE PRONTOOO

--- a/src/app/components/dashboard-secretaria/dashboard-secretaria.component.html
+++ b/src/app/components/dashboard-secretaria/dashboard-secretaria.component.html
@@ -27,7 +27,7 @@
                 </ng-template>
               </div>
             </div>
-            <button (click)="navigateTo('solicitacoes-troca-turma')" class="btn btn-sm btn-outline-primary mt-2">Ver Solicitações</button>
+            <button (click)="navigateTo('/funcionariosecretaria/solicitacoes-troca-turma')" class="btn btn-sm btn-outline-primary mt-2">Ver Solicitações</button>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
                 </ng-template>
               </div>
             </div>
-            <button (click)="navigateTo('solicitacoes-transferencia-graduacao')" class="btn btn-sm btn-outline-primary mt-2">Ver Solicitações</button>
+            <button (click)="navigateTo('/funcionariosecretaria/solicitacoes-transferencia-graduacao')" class="btn btn-sm btn-outline-primary mt-2">Ver Solicitações</button>
           </div>
         </div>
       </div>
@@ -63,16 +63,16 @@
   <section class="section management-actions mt-4">
     <h2>Gerenciamento Acadêmico</h2>
     <div class="list-group">
-      <button type="button" class="list-group-item list-group-item-action" (click)="navigateTo('alunos')">
+      <button type="button" class="list-group-item list-group-item-action" (click)="navigateTo('/funcionariosecretaria/alunos')">
         <i class="bi bi-person-lines-fill me-2"></i> Gerenciar Alunos
       </button>
-      <button type="button" class="list-group-item list-group-item-action" (click)="navigateTo('graduacoes')">
+      <button type="button" class="list-group-item list-group-item-action" (click)="navigateTo('/funcionariosecretaria/graduacoes')">
         <i class="bi bi-mortarboard-fill me-2"></i> Gerenciar Graduações
       </button>
-      <button type="button" class="list-group-item list-group-item-action" (click)="navigateTo('materias')">
+      <button type="button" class="list-group-item list-group-item-action" (click)="navigateTo('/funcionariosecretaria/materias')">
         <i class="bi bi-book-half me-2"></i> Gerenciar Matérias
       </button>
-      <button type="button" class="list-group-item list-group-item-action" (click)="navigateTo('turmas')">
+      <button type="button" class="list-group-item list-group-item-action" (click)="navigateTo('/funcionariosecretaria/turmas')">
         <i class="bi bi-collection-fill me-2"></i> Gerenciar Turmas
       </button>
       <!-- Adicionar mais links de gerenciamento conforme necessário -->
