--- a/src/app/components/funcionario-secretaria/turma-list/turma-list.component.html
+++ b/src/app/components/funcionario-secretaria/turma-list/turma-list.component.html
@@ -19,11 +19,11 @@
     <tbody>
       <tr *ngFor="let turma of turmas">
         <td>{{ turma.id }}</td>
-        <td>{{ turma.materia.titulo }}</td>
-        <td>{{ turma.professor.nome }}</td>
+        <td>{{ turma.materia?.titulo }}</td>
+        <td>{{ turma.professor?.nome }}</td>
         <td>{{ turma.turno }}</td>
         <td>{{ turma.campus }}</td>
-        <td>{{ turma.alunos.length }} / {{ turma.limiteAlunos }}</td>
+        <td>{{ turma.alunos?.length || 0 }} / {{ turma.limiteAlunos || 0 }}</td>
         <td>
           <button class="btn btn-sm btn-info mr-2" (click)="editTurma(turma.id)">Editar</button>
           <button class="btn btn-sm btn-danger" (click)="deleteTurma(turma.id)">Deletar</button>
