--- a/src/app/components/funcionario-secretaria/turma-form/turma-form.component.html
+++ b/src/app/components/funcionario-secretaria/turma-form/turma-form.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="form-row">
-      <div class="form-group col-md-4">
+      <div class="form-group col-md-3">
         <label for="turno">Turno</label>
         <select id="turno" formControlName="turno" class="form-control">
           <option value="" disabled>Selecione um turno</option>
@@ -29,14 +29,25 @@
           <option value="NOITE">Noite</option>
         </select>
       </div>
-      <div class="form-group col-md-4">
+      <div class="form-group col-md-3">
+        <label for="diaSemana">Dia da Semana</label>
+        <select id="diaSemana" formControlName="diaSemana" class="form-control">
+          <option value="" disabled>Selecione um dia</option>
+          <option value="SEGUNDA">Segunda-feira</option>
+          <option value="TERCA">Terça-feira</option>
+          <option value="QUARTA">Quarta-feira</option>
+          <option value="QUINTA">Quinta-feira</option>
+          <option value="SEXTA">Sexta-feira</option>
+        </select>
+      </div>
+      <div class="form-group col-md-3">
         <label for="campus">Campus</label>
         <select id="campus" formControlName="campus" class="form-control">
           <option value="" disabled>Selecione um campus</option>
           <option *ngFor="let campus of campi" [value]="campus">{{ campus }}</option>
         </select>
       </div>
-      <div class="form-group col-md-4">
+      <div class="form-group col-md-3">
         <label for="limiteAlunos">Limite de Alunos</label>
         <input type="number" id="limiteAlunos" formControlName="limiteAlunos" class="form-control">
       </div>
