--- a/src/app/components/funcionario-secretaria/turma-list/turma-list.component.html
+++ b/src/app/components/funcionario-secretaria/turma-list/turma-list.component.html
@@ -11,6 +11,7 @@
         <th>Matéria</th>
         <th>Professor</th>
         <th>Turno</th>
+        <th>Dia da Semana</th>
         <th>Campus</th>
         <th>Alunos</th>
         <th>Ações</th>
@@ -22,6 +23,7 @@
         <td>{{ turma.materia.titulo }}</td>
         <td>{{ turma.professor.nome }}</td>
         <td>{{ turma.turno }}</td>
+        <td>{{ turma.diaSemana }}</td>
         <td>{{ turma.campus }}</td>
         <td>{{ turma.alunos.length }} / {{ turma.limiteAlunos }}</td>
         <td>
@@ -30,7 +32,7 @@
         </td>
       </tr>
       <tr *ngIf="turmas.length === 0">
-        <td colspan="7" class="text-center">Nenhuma turma encontrada.</td>
+        <td colspan="8" class="text-center">Nenhuma turma encontrada.</td>
       </tr>
     </tbody>
   </table>
