Iniciação dos métodos de aluno

--- a/src/app/components/dashboard-aluno/dashboard-aluno.component.html
+++ b/src/app/components/dashboard-aluno/dashboard-aluno.component.html
@@ -1,1 +1,12 @@
-<p>dashboard-aluno works!</p>
+<div class="container mt-4">
+  <div class="px-4 py-5 my-5 text-center">
+    <h1 class="display-5 fw-bold">Dashboard do Aluno</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">Bem-vindo(a) ao seu portal. Utilize os botões abaixo para acessar as funcionalidades disponíveis.</p>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Gerar Grade Horária</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Fazer Solicitação</button>
+      </div>
+    </div>
+  </div>
+</div>
