Ajuste de exibição de solicitações

--- a/src/app/components/secretaria/solicitacoes-secretaria-list/solicitacoes-secretaria-list.component.html
+++ b/src/app/components/secretaria/solicitacoes-secretaria-list/solicitacoes-secretaria-list.component.html
@@ -57,7 +57,7 @@
                 <td>{{ s.nomeAluno }}</td>
                 <td>{{ s.tipo }}</td>
                 <td>{{ s.campus }}</td>
-                <td>
+                <td *ngIf="selectedStatus === 'ABERTA'">
                   <button class="btn btn-success btn-sm me-2" (click)="aprovar(s.id)" title="Aprovar">
                     <i class="bi bi-check-lg"></i>
                   </button>
