--- a/src/app/components/aluno/solicitacoes/solicitacao-aluno-list/solicitacao-aluno-list.component.html
+++ b/src/app/components/aluno/solicitacoes/solicitacao-aluno-list/solicitacao-aluno-list.component.html
@@ -31,7 +31,7 @@
             </span>
           </td>
           <td>
-            <a [routerLink]="['/aluno/solicitacoes', s.id]" class="btn btn-sm btn-info">Ver Detalhes</a>
+            <button class="btn btn-info btn-sm" [routerLink]="['/solicitacoes/detalhes', s.id]">Ver Detalhes</button>
           </td>
         </tr>
       </tbody>
